--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scc">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
     <title>CV Vera Krasnova</title>
 </head>
 <body>
     <header>
         <ul class="nav-list">
-            <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
             <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
             <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
             <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
@@ -22,6 +24,7 @@
     </header>
     <main>
         <section class="section" id="profile">
+            <p>Hello, my name is</p>
             <h1>Vera Krasnova</h1>
         </section>
         <section class="section" id="contacts">
@@ -64,14 +67,12 @@
         <section class="section" id="education">
             <h2>Education</h2>
             <ul class="education-list">
-                <li class="education-item">Novosibirsk State University of Architecture, Design and Arts</li>
-                <ul>
-                    <li>Architect</li>
-                </ul>
+                <li class="education-item">Novosibirsk State University of Architecture, Design and Arts (Architect)</li>
                 <li class="education-item">Self-education</li>
                 <ul>
                     <li>HTML Academy</li>
                     <li>Learn.JavaScript</li>
+                    <li>CodeWars</li>
                 </ul>
             </ul>
         </section>
@@ -82,6 +83,22 @@
 
     </main>
     <footer>
+        <div class="footer-items">
+            <div>
+                <p> 2021 Vera Krasnova</p>
+            </div>
+            <div>
+                <p><a href="https://rs.school/js/"><img src="assets/rs_school_js.svg" alt="RS School" height="30px"></a></p>
+            </div>
+            <div >
+                <ul class="social-list">
+                    <li class="social-list-item"><a href="https://www.codewars.com/users/VerchkaFeya"><img src="assets/codewars-logo.svg" width="15px" height="15px" alt="CodeWars"></a></li>
+                    <li class="social-list-item"><a href="https://www.instagram.com/verchka_feya/"><img src="assets/instagram-logo.png" width="15px" height="15px" alt="CodeWars"></a></li>
+                    <li class="social-list-item"><a href="https://github.com/VerchkaFeya"><img src="assets/github-logo.png" width="15px" height="15px" alt="CodeWars"></a></li>
+                </ul>
+            </div>
+        </div>
+        
 
     </footer>
 </body>
